<resources>
    // General Strings
    <string name="app_name">Fut Play</string>
    <string name="contDesc">description</string>
    <string name="number">0</string>

    // Login Strings
    <string name="txtVwLogin">Iniciar Sesión</string>
    <string name="edTxtLoginEmail">Correo Electrónico:</string>
    <string name="edTxtLoginPassword">Contraseña:</string>
    <string name="txtVwLoginForgotPass">¿Olvidó su contraseña?</string>
    <string name="txtVwLoginRegister">Regístrese</string>

    // Sign-Up Strings
    <string name="txtVwSignUp">Registrarse</string>
    <string name="edTxtSignUpFullName">Nombre Completo:</string>
    <string name="edTxtSignUpEmail">Correo Electrónico:</string>
    <string name="edTxtSignUpPassword">Contraseña:</string>
    <string name="edTxtSignUpConfirmPassword">Confirmar Contraseña:</string>
    <string name="edTxtSignUpNickname">Apodo:</string>
    <string name="edTxtSignUpBirthDate">Fecha de Nacimiento:</string>
    <string name="edTxtSignUpRegion">Región:</string>
    <string name="edTxtSignUpPosition">Posición:</string>
    <string name="edTxtSignUpPhoneNumber">Teléfono:</string>

    // Profile Strings
    <string name="txtVwProfileNickname">Apodo:</string>
    <string name="txtVwProfileRegion">Región:</string>
    <string name="txtVwProfilePosition">Posición:</string>
    <string name="txtVwProfileAge">Edad:</string>
    <string name="txtVwProfileStatistics">Estadísticas</string>
    <string name="txtVwProfileMatchesPlayed">Partidos Jugados: </string>
    <string name="txtVwProfileMVP">Jugador del Partido: </string>
    <string name="txtVwProfileFutPlayPlayer">Jugador FutPlay: </string>

    // Club Menu
    <string name="txtVwClubFirstTime">Crea o solicita unirte a un club!</string>
    <string name="btnCreateClub">Crea tu Propio Club</string>
    <string name="btnVwJoinClub">Únete a un Club</string>

    // Create Club
    <string name="txtVwPopupCreateClubTittle">Creación del Club:</string>
    <string name="txtVwPopupCreateClubDescription">Completa los siguientes campos y crea tu propio Club:</string>
    <string name="edTxtPopupClubName">Nombre del Club:</string>
    <string name="edTxtPopupClubTag">Abreviación: Ej. ABC</string>
    <string name="edTxtPopupClubRegion">Región:</string>

    // Send Join-Club Request
    <string name="txtVwPopupSendClubRequestTitle">Solicitud de Ingreso a un Club:</string>
    <string name="txtVwPopupSendClubRequestDescription">Ingresa el TAG y el ID del club para solicitar unirte:</string>
    <string name="edTxtPopupClubRequestID">ID del club:</string>
    <string name="edTxtPopupClubRequestName">TAG del club: Ej. ABC</string>

    // Popup TeamMate Profile Strings
    <string name="txtVwTeamMateProfileTitle">Ver Perfil</string>
    <string name="txtVwPopupTeamMateAdminDescription">Presiona el balón para hacer a este jugador líder del equipo.</string>
    <string name="txtVwTeamMateProfileNickname">Apodo:</string>
    <string name="txtVwTeamMateProfileRegion">Región:</string>
    <string name="txtVwTeamMateProfilePosition">Posición:</string>
    <string name="txtVwTeamMateProfileAge">Edad:</string>
    <string name="txtVwTeamMateProfileStatistics">Estadísticas</string>
    <string name="txtVwTeamMateProfileMatchesPlayed">Partidos Jugados: </string>
    <string name="txtVwTeamMateProfileMVP">Jugador del Partido: </string>
    <string name="txtVwTeamMateProfileFutPlayPlayer">Jugador FutPlay: </string>

    // Popup Club Requests
    <string name="txtVwPopupRequestsMainTitle">Ver Solicitudes de Ingreso</string>
    <string name="txtVwPopupRequestsDescription">En el cuadro de abajo aparecerán (si las hay) solicitudes de ingreso al Club, puedes aceptarlas o rechazarlas.</string>
    <string name="txtVwPopUpRequestsTitle">Solicitudes de Ingreso</string>

    // Popup Club Requesters
    <string name="txtVwPopUpRequestersTitle">Ver Perfil del Solicitante</string>
    <string name="txtVwPopUpRequestersDescription">Presiona el boton para aceptar al jugador en tu club!</string>
    <string name="btnAcceptRequest">Aceptar Solicitud</string>

    // Profile Settings Strings
    <string name="edTxtProfileSettingsNickname">Apodo:</string>
    <string name="edTxtProfileSettingsRegion">Región:</string>
    <string name="edTxtProfileSettingsPosition">Posición:</string>
    <string name="edTxtProfileSettingsEmail">Correo Electrónico:</string>
    <string name="edTxtProfileSettingsPassword">Contraseña:</string>
    <string name="edTxtProfileSettingsPhoneNumber">Teléfono:</string>

    // Popup Profile Info Strings
    <string name="txtVwPopupProfileInfoTitle">Completar Perfil</string>
    <string name="txtVwPopupProfileInfoDescription">Ingrese la siguiente información para completar su perfil:</string>
    <string name="edTxtPopupProfileInfoNickname">Apodo:</string>
    <string name="edTxtPopupProfileInfoRegion">Región:</string>

    // Popup Profile Settings Strings
    <string name="txtVwPopupProfileSettingsTitle">Configurar Perfil</string>
    <string name="txtVwPopupProfileSettingsDescription">Observe, edite y guarde la información de su perfil:</string>
    <string name="edTxtPopupProfileSettingsFullName">Nombre Completo:</string>
    <string name="edTxtPopupProfileSettingsNickname">Apodo:</string>
    <string name="edTxtPopupProfileSettingsRegion">Región:</string>
    <string name="edTxtPopupProfileSettingsAge">Edad:</string>
    <string name="edTxtPopupProfileSettingsEmail">Correo Electrónico:</string>
    <string name="edTxtPopupProfileSettingsNewPassword">Nueva Contraseña:</string>
    <string name="edTxtPopupProfileSettingsConfirmNewPassword">Confirmar Nueva Contraseña:</string>
    <string name="edTxtPopupProfileSettingsPhoneNumber">Teléfono:</string>

    // Region Picker Strings
    <string name="txtVwRegionPickerProvince">Provincia</string>
    <string name="txtVwRegionPickerCanton">Cantón</string>
    <string name="txtVwRegionPickerDistrict">Distrito</string>
    <string name="txtVwRegionPickerAccept">Aceptar</string>

    // Crop Strings
    <string name="txtVwCropImageCrop">Recortar</string>

    // Teams Strings
    <string name="txtVwTeamName">Nombre:</string>
    <string name="txtVwTeamRegion">Región:</string>
    <string name="txtVwTeamCode">Código:</string>
    <string name="txtVwTeamHistory">Historial:</string>
    <string name="txtVwTeamWDL">(G-E-P)</string>
    <string name="txtVwTeamStreak">Racha:</string>
    <string name="txtVwTeamPlayers">Jugadores</string>

    // Fields Strings


    // Matches Strings


    // Card View Player Strings
    <string name="txtVwCrdVwPlayerName">Nombre</string>

    // Done Strings
    <string name="txtVwDoneMessage">Mensaje</string>
    <string name="txtVwDoneOk">OK</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>