<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Controllers.Fragments.LoginFragment">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgVwCheckBckgnd"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/check_anim_background"
            android:contentDescription="@string/contDesc" />

        <ImageView
            android:id="@+id/imgVwDoneCheck"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contDesc"
            android:src="@drawable/check_anim_avd" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtVwDoneMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/txtVwDoneMessage"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtVwDoneOk"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ok_button_background"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="3dp"
        android:text="@string/txtVwDoneOk"
        android:textAlignment="center"
        android:textSize="25sp" />
</LinearLayout>