<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Controllers.Fragments.ProfileFragment">

    <ProgressBar
        android:id="@+id/progressBarProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/imgVwProfileSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/contDesc"
        android:src="@drawable/settings_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/imgVwProfileImg"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/contDesc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile_image_icon" />
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtVwProfileNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/txtVwProfileNickname"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtVwProfileRegion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/txtVwProfileRegion"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtVwProfilePosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/txtVwProfilePosition"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtVwProfileAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/txtVwProfileAge"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/txtVwProfileStatistics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/txtVwProfileStatistics"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtVwProfileMatchesPlayed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/txtVwProfileMatchesPlayed"
                                android:textAlignment="textStart"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <TextView
                                android:id="@+id/txtVwProfileMatchesPlayedNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="25sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtVwProfileMVP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/txtVwProfileMVP"
                                android:textAlignment="textStart"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <TextView
                                android:id="@+id/txtVwProfileMVPNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="25sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtVwProfileFutPlayPlayer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/txtVwProfileFutPlayPlayer"
                                android:textAlignment="textStart"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <TextView
                                android:id="@+id/txtVwProfileFutPlayPlayerNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="25sp" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>