<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtVwRegionPickerProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/txtVwRegionPickerProvince"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/dark_purple"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/regionPickerProvinces"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

                <TextView
                    android:id="@+id/txtVwRegionPickerCanton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/txtVwRegionPickerCanton"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/dark_purple"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/regionPickerCantons"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

                <TextView
                    android:id="@+id/txtVwRegionPickerDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/txtVwRegionPickerDistrict"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/dark_purple"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/regionPickerDistricts"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/txtVwRegionPickerAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/txtVwRegionPickerAccept"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>